# git-rewind

./: .gitignore  Cargo.toml  README.md  demo.tape  rustfmt.toml
crates/git-rewind-cli/: Cargo.toml
crates/git-rewind-cli/src/: cli.rs  lib.rs  main.rs
crates/git-rewind-cli/src/app/: mod.rs  model.rs  service.rs
crates/git-rewind-cli/src/commands/: doctor.rs  mod.rs  version.rs
crates/git-rewind-core/: Cargo.toml
crates/git-rewind-core/src/: lib.rs
crates/git-rewind-core/src/reflog/: action.rs  entry.rs  mod.rs
crates/git-rewind-core/src/timeline/: item.rs  mod.rs  projector.rs
crates/git-rewind-git/: Cargo.toml
crates/git-rewind-git/src/: error.rs  lib.rs  repository.rs
crates/git-rewind-git/src/commit/: inspector.rs  model.rs
crates/git-rewind-git/src/diff/: inspector.rs  mod.rs  model.rs
crates/git-rewind-git/src/reflog/: mapper.rs  mod.rs
crates/git-rewind-ui/: Cargo.toml
crates/git-rewind-ui/src/: lib.rs  main.rs
crates/git-rewind-ui/src/actions/: action.rs  mapper.rs  mod.rs  reducer.rs
crates/git-rewind-ui/src/render/: layout.rs  mod.rs  renderer.rs  theme.rs  timeline.rs
crates/git-rewind-ui/src/runtime/: application.rs  events.rs  mod.rs  terminal.rs
crates/git-rewind-ui/src/state/: app.rs  mod.rs  selection.rs  timeline.rs
crates/paste-patch/: Cargo.toml
docs/: architecture.md
