[package]
name = "git-rewind-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
git-rewind-core.workspace = true
git-rewind-git.workspace = true
thiserror.workspace = true

[dev-dependencies]
git2.workspace = true
tempfile.workspace = true



