[package]
name = "git-rewind-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
git2.workspace = true
thiserror.workspace = true
git-rewind-core.workspace = true

[dev-dependencies]
tempfile.workspace = true

