[package]
name = "git-rewind-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
git-rewind-cli = { workspace = true }
git-rewind-git = { workspace = true }
git-rewind-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
tempfile = { workspace = true }
